--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "boostrap": "^2.0.0",
+    "oas": "^10.6.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
