--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "styled-components": "^5.2.1",
+    "sweetalert2": "^10.16.6",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
