--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "scroll-snap": "^3.2.4",
     "styled-components": "^5.2.1",
     "sweetalert2": "^10.16.6",
     "web-vitals": "^1.1.1"
